# Intelligent-Access-Control-System

./: .env.example  .gitignore  AGENTS.md  ESPHOME.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260509_0001_add_alfred_semantic_embeddings.py  20260531_0000_current_schema_baseline.py  20260531_0002_automation_webhook_hardening.py  20260531_0003_notification_runs.py  20260624_0001_security_review_hardening.py  20260713_0001_keep_open_duration_departures_indexed.py  20260713_0002_reconcile_historical_metadata_indexes.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  providers.py  tools.py
backend/app/api/: confirmations.py  dependencies.py  router.py
backend/app/core/: __init__.py  auth_secret.py  config.py  crypto.py  logging.py
backend/app/db/: base.py  bootstrap.py  migration_policy.py
backend/app/models/: __init__.py  core.py  enums.py
backend/app/modules/: __init__.py  registry.py
backend/app/scripts/: __init__.py  seed_family_users.py
backend/app/services/: access_devices.py  access_events.py  action_confirmations.py  actionable_notifications.py  alert_snapshots.py  auth.py  auth_secret_management.py  automation_integration_actions.py  automations.py  chat.py  chat_attachments.py  chat_contracts.py  chat_formatting.py  chat_routing.py  dependency_updates.py  discord_messaging.py  domain_events.py  dvla.py  event_bus.py  expected_presence.py  gate_commands.py  gate_malfunctions.py  home_assistant.py  leaderboard.py  (+28 more)
backend/tests/: conftest.py  test_access_devices.py  test_access_events.py  test_action_confirmations.py  test_actionable_notifications.py  test_alerts.py  test_auth_secret.py  test_auth_sessions.py  test_automations.py  test_chat_agent.py  test_dependency_updates.py  test_directory_people.py  test_discord_messaging.py  test_dvla_service.py  test_event_bus.py  test_expected_presence.py  test_gate_commands.py  test_gate_malfunctions.py  test_http_clients.py  test_icloud_calendar.py  test_investigations.py  test_leaderboard.py  test_lpr_timing.py  test_lpr_zone_shadow.py  test_messaging_bridge.py  test_movement_fsm.py  test_movement_ledger.py  test_movement_reconciliation.py  test_movement_sessions.py  test_notification_workflows.py  test_operational_status.py  test_profile_photos.py  test_realtime.py  test_reports.py  test_restart_backfill.py  test_safety_hardening.py  test_schedule_evidence.py  test_search_api.py  test_settings_api.py  test_simulation_e2e.py  (+11 more)
(+265 files in other folders)
