[project]
name = "intelligent-access-backend"
version = "0.1.0"
description = "Backend for an intelligent access control and presence system"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "python-json-logger>=2.0.7",
    "redis>=5.1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uiprotect==10.3.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
