[project]
name = "intelligent-access-backend"
version = "0.1.0"
description = "Backend for an intelligent access control and presence system"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apprise>=1.10.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "croniter>=6.2.2",
    "discord.py>=2.7.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "packaging>=26.2",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "playwright>=1.59.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pyicloud>=2.5.0",
    "python-multipart>=0.0.28",
    "python-json-logger>=4.1.0",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uiprotect==10.4.1",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "alfred_critical: critical Alfred regressions covering answer correctness and confirmation safety",
]
